Update Unit 4 Challenge - Tier 3.ipynb

--- a/Unit 4 Challenge - Tier 3.ipynb
+++ b/Unit 4 Challenge - Tier 3.ipynb
@@ -2938,7 +2938,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Hackney` is the London's boroughs tha have seen the greatest increase in housing prices, on average, over the last two decades with a ratio increase of `6.20` betwen `1998` and `2018`. "
+    "`Hackney` is the London's boroughs that have seen the greatest increase in housing prices, on average, over the last two decades with a ratio increase of `6.20` between `1998` and `2018`. "
    ]
   }
  ],
