--- a/03_exploratory_data_analysis.ipynb
+++ b/03_exploratory_data_analysis.ipynb
@@ -4014,7 +4014,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1** Your answer here\n",
+    "\n",
+    "* There were only two categorical features in the data: state and region. The rest were all numerical features about the resorts (physical, operational, and pricing characteristics) and state-wide summary data. The name of the resort is also there to identify the resorts.\r\n",
+    "* \r\n",
+    "We've constructed some potentially useful and business relevant features, derived from summary statistics, for each of the states we're concerned with. We've explored many of these features in turn and found various trends. Some states are higher in some but not in others. Some features will also be more correlated with one another than others.* \r\n",
+    "\r\n",
+    "To disentangle this interconnected web of relationships we decided to perform a principal components analysis (PCA). This technique will find linear combinations of the original features that are uncorrelated with one another and order them by the amount of variance they explain. We then used these derived features to visualize the data in a lower dimension (e.g. 2 down from 7) and know how much variance the representation explain* s.\r\n",
+    "\r\n",
+    "We added the average ticket price to the visual (scatter plot) and  created a whole new DataFrame by combining information. But we needed to handle missing values from (Rhode Islan* d). \r\n",
+    "\r\n",
+    "We saw the same distribution of states as before, but with additional information about the average price. There isn't an obvious pattern. In our representation of the ski summaries for each state, which accounts for some 77% of the variance, we simply didn’t see a pattern with * price.\r\n",
+    "\r\n",
+    "We then use Seaborn to refine our visualization. In the first two components, there is a spread of states across the first component. It looks like Vermont and New Hampshire might be off on their own a little in the second dimension, although they're no more extreme than New York and Colorado are in the first dimension. We wanted to get an idea of what it is that pushes Vermont and New Hampshire up and we noticed that resorts_per_100kcapita and resorts_per_100ksq_mile might count for quite a lot, in a positive sense. So, yes, both states have particularly large values of resorts_per_100ksq_mile in absolute terms, and these put them more than 3 standard deviations from the mean. Vermont also has a notably large value for resorts_per_100kcapita. New York, then, does not seem to be a stand-out for density of ski resorts either in terms of state size or populatio* n count.\r\n",
+    "\r\n",
+    "Based on our findings, we can offer some justification for treating all states equally, and work towards building a pricing model that considers all states together, without treating anyone particularly specially. We haven't seen any clear grouping yet, but we have captured potentially relevant state data in features most likely to be relevant to our business*  use case.\r\n",
+    "\r\n",
+    "The next step was to perform features engineering. We first got  a high-level view of relationships amongst the features on a heatmap. Correlations, particularly viewing them together as a heatmap, can be a great first pass at identifying patterns. But correlations can mask relationships between two variables. So, we created a series of scatterplots to really dive into how ticket price varies with other numer* ic features.\r\n",
+    "\r\n",
+    "Turning our attention to our target feature, AdultWeekend ticket price, we saw quite a few reasonable correlations. Finally, some further features may be useful in that they relate to how easily a resort can transport people around. These are the numbers of various chairs, and the number of runs, but we  don't have the ratio of chairs to runs. It seems logical that this ratio would inform us how easily, and so quickly, people could get to their ne* xt ski slope! \r\n",
+    "\r\n",
+    "It seems that the more chairs a resort has to move people around, relative to the number of runs, ticket price rapidly plummets and stays low. What we may be seeing here is an exclusive vs. mass market resort effect; if you a resort don't have so many chairs, it can charge more for its tickets, although with fewer chairs the resort will inevitably be able to serve fewer visitors. The price per visitor is high but the number of visitors may be low. Something very useful that's missing from the data is the number of \n",
+    "  v* isitors per year.\r\n",
+    "It also appears that having no fast quads may limit the ticket price, but if your resort covers a wide area then getting a small number of fast quads may be beneficil to ticket price.\r\n"
    ]
   },
   {
