--- a/05_modeling.ipynb
+++ b/05_modeling.ipynb
@@ -1804,7 +1804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A: 2 My answer: \n",
+    "**A: 2** My answer:\n",
     "\n",
     "* In this use case we already have plenty of data.  We're often led to believe more data is always good, but gathering data invariably has a cost associated with it. We Assessed this trade off by seeing how performance varies with differing data set sizes using the learning_curve function There's an initial rapid improvement in model scores as one would expect, but it's essentially levelled off by around a sample size of 40-50.\n",
     "\n",
