--- a/Unit 27.3 Capstone Two - Pre-processing and Training Data Development/Model_Selection.ipynb
+++ b/Unit 27.3 Capstone Two - Pre-processing and Training Data Development/Model_Selection.ipynb
@@ -179,7 +179,7 @@
     "preds = clf.predict(valid_df[predictors])\n",
     "\n",
     "roc_auc = roc_auc_score(valid_df[target].values, preds)\n",
-    "print('Random Forest ROC AUC = %.3f' % (roc_auc))"
+    "print('Random Forest ROC_AUC = %.3f' % (roc_auc))"
    ]
   },
   {
@@ -406,11 +406,11 @@
     "\n",
     "I therefore fitted these 3 models on a training set and validating the results on a test set, The split was 80/20.  I went back to the original data set for actual training and validation. \n",
     "\n",
-    "After implementing he Logistic Regression, I tried the EXtreme Gradient Boosting and Randome Forest Models for model comparison.\n",
+    "After implementing he Logistic Regression, I tried the Extreme Gradient Boosting and Randome Forest Models for model comparison.\n",
     "\n",
     "After performing over-sampling and Recursive features Elimination, I fitted a Logistic Regression Model to the data and obtained ROC of **0.884** on the test set. The RMSE of the Logistic Regression model was: **0.45**. With the Random Forest model the **AUC_ROC** was **0.624** the worst of the three models.\n",
     "\n",
-    "With the XGBoost model, I used the validation set for validation of the training model. The best validation score obtained was **0.810** which is lower ten what I obotines withthe Logistic regression Model. The Root Mean Squared Error was **0.2359**\n",
+    "With the XGBoost model, I used the validation set for validation of the training model. The best validation score obtained was **0.810** which is lower ten what I obtained with the Logistic regression model. The Root Mean Squared Error was **0.2359**\n",
     "\n",
     "Although the AUC_ROC of the Logistic Regression Model is higher than the one of the XGBoost Model, the RMSE of the XGBoost Model is significantly lower with a very good AUC_ROC of **0.810** as well, therefore the XGBoost Model outperformed all other models. "
    ]
